--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Batch 5</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Unlocking a Transformative Diet Plan</h1>
-    <p>Are you searching for a straightforward and uncomplicated diet plan to shed those extra pounds? Look no further! You can attain your weight loss goals by selecting healthy meal options. However, this task can be challenging in Pakistan due to the unique characteristics of Pakistani cuisine and dietary habits. Our culinary traditions revolve around a rich blend of spices and flavors, often accompanied by generous amounts of oil. Consequently, our meals tend to be high in carbohydrates and sugar, which can contribute to unwanted weight gain. But fear not! We have curated a tailored diet plan for weight loss, specifically designed to address these challenges and help you achieve a healthier lifestyle.</p>
-</body>
+    <p>
+      Are you searching for a straightforward and uncomplicated diet plan to
+      shed those extra pounds? Look no further! You can attain your weight loss
+      goals by selecting healthy meal options. However, this task can be
+      challenging in Pakistan due to the unique characteristics of Pakistani
+      cuisine and dietary habits. Our culinary traditions revolve around a rich
+      blend of spices and flavors, often accompanied by generous amounts of oil.
+      Consequently, our meals tend to be high in carbohydrates and sugar, which
+      can contribute to unwanted weight gain. But fear not! We have curated a
+      tailored diet plan for weight loss, specifically designed to address these
+      challenges and help you achieve a healthier lifestyle.
+    </p>
+    <p>
+        We adopt strict diet measures, often excluding certain food groups and emphasizing steamed vegetables, boiled meat, and green teas. However, adhering to these diets can be challenging. Additionally, physical exercise is often overlooked, contributing to the increasing problem of obesity. However, eliminating food groups or following fad diets is not the solution. You can get rid of obesity by following a healthy weight-loss diet plan. This article presents a comprehensive guide, including an ideal weight-loss diet plan, offering a more sustainable approach to achieving your weight-loss goals.
+    </p>
+  </body>
 </html>
