--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
       challenges and help you achieve a healthier lifestyle.
     </p>
     <p>
-        We adopt strict diet measures, often excluding certain food groups and emphasizing steamed vegetables, boiled meat, and green teas. However, adhering to these diets can be challenging. Additionally, physical exercise is often overlooked, contributing to the increasing problem of obesity. However, eliminating food groups or following fad diets is not the solution. You can get rid of obesity by following a healthy weight-loss diet plan. This article presents a comprehensive guide, including an ideal weight-loss diet plan, offering a more sustainable approach to achieving your weight-loss goals.
+      We adopt strict diet measures, often excluding certain food groups and
+      emphasizing steamed vegetables, boiled meat, and green teas. However,
+      adhering to these diets can be challenging. Additionally, physical
+      exercise is often overlooked, contributing to the increasing problem of
+      obesity. However, eliminating food groups or following fad diets is not
+      the solution. You can get rid of obesity by following a healthy
+      weight-loss diet plan. This article presents a comprehensive guide,
+      including an ideal weight-loss diet plan, offering a more sustainable
+      approach to achieving your weight-loss goals.
     </p>
   </body>
 </html>
