--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Batch 5</title>
+    <title>HTML BASICS</title>
   </head>
   <body>
-    <h1>Unlocking a Transformative Diet Plan</h1>
+    <pre>
+        <a href="./index.html">Home</a>   <a href="./aboutUs.html">AboutUS</a> <a href="./program.html">Program</a> <a href="./Contact.html">ContactUS</a>
+    </pre>
+    <!-- below is the type of heading tags -->
+    <h1>HTML BASICS</h1>
+    <h2>HTML BASICS</h2>
+    <h3>HTML BASICS</h3>
+    <h4>HTML BASICS</h4>
+    <h5>HTML BASICS</h5>
+    <h6>HTML BASICS</h6>
+    <!-- <H1>HTML CAPITAL</H1> -->
     <p>
-      Are you searching for a straightforward and uncomplicated diet plan to
-      shed those extra pounds? Look no further! You can attain your weight loss
-      goals by selecting healthy meal options. However, this task can be
-      challenging in Pakistan due to the unique characteristics of Pakistani
-      cuisine and dietary habits. Our culinary traditions revolve around a rich
-      blend of spices and flavors, often accompanied by generous amounts of oil.
-      Consequently, our meals tend to be high in carbohydrates and sugar, which
-      can contribute to unwanted weight gain. But fear not! We have curated a
-      tailored diet plan for weight loss, specifically designed to address these
-      challenges and help you achieve a healthier lifestyle.
+      This comment effectively communicates that the content within the comment
+      tag is not meant to be processed by the browser. <a href="">for further detail you can visit GOOGLE</a>
     </p>
     <p>
-      We adopt strict diet measures, often excluding certain food groups and
-      emphasizing steamed vegetables, boiled meat, and green teas. However,
-      adhering to these diets can be challenging. Additionally, physical
-      exercise is often overlooked, contributing to the increasing problem of
-      obesity. However, eliminating food groups or following fad diets is not
-      the solution. You can get rid of obesity by following a healthy
-      weight-loss diet plan. This article presents a comprehensive guide,
-      including an ideal weight-loss diet plan, offering a more sustainable
-      approach to achieving your weight-loss goals.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem vero ex
+      consequatur mollitia quisquam sed corrupti repellendus totam
+      accusantium,<b>doloribus consectetur</b> deleniti. Commodi temporibus
+      corporis quaerat ad vitae adipisci, doloremque sunt accusantium ipsam
+      fugit odit? Hic esse officiis corporis neque.
     </p>
+    <a href="https://www.google.co.uk/" target="_blank" >Google</a>
+    <img src="" height="200px" alt="google image">
+
   </body>
 </html>
